# FBD

./: .gitattributes  .gitignore  .nanorc  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.md.save  Cargo.toml  Dev Notes.txt  LICENSE  PKGBUILD  README.md  SECURITY.md  Sans.txt  cmd.txt  commit.sh  desktop.ini  doc.md  dosbox.conf  fbd.bas  fbdEditor.bas  git-commit.sh  launcher.sh  max20_puns.bas  puns.txt  setup.sh  test.ts  updated_dack.bas
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codacy.yml  codeql.yml  google-cloudrun-source.yml  mdbook.yml
Docker/: Dockerfile  Images.txt  any.sh
app/: Sans.txt  fbd.bas  max20_puns.bas  puns.txt
app/cli_Mode/: README.md  fbdButCli.bas  links.txt  max20_puns.bas  updated_dack.bas
app/games/: blackj.bas  gacha.bas  poker1.bas
app/wiki/: WIKI.md
cli-chat-main/: README.md  index.js  package-lock.json  package.json  server.js
docs/: CNAME  index.html  package-lock.json
go-cli-chat/: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
go-cli-chat/cmd/client/: main.go
go-cli-chat/cmd/server/: main.go
go-cli-chat/pkg/chat/: message.go  supervisor.go  user.go
go-cli-chat/pkg/frontend/: ui.go
qb45/QB45/: PACKING.LST.txt
qb64_ftp_client-master/: FTP.txt  gui_lib_test.bas
src/: BUILD  dog.txt  duck.txt  fbd.bas  fbd.php  fbd.sh  fbdEditor.bas  main.rs  nintendo.txt  puns.txt  reader.bm  rules.txt  switch.sh  under.txt
src/Archive/: fbd.bas
src/QB64 Version/: fbd.bas
src/readers/: links.c  puns.c  sans.c
src/scripts/: search.sh
test/: .tape  qb64 2024-01-21 16-28-12-71.avi
(+14 files in other folders)
